<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LedRGBActivity">

    <ImageView
        android:id="@+id/colorImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/disco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/color_circle" />

    <View
        android:id="@+id/viewColor"
        android:layout_width="20dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/colorImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colorImg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTensao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/colorImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sbTensao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="7"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/colorImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorImg"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/txtRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtRed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtGreen"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBlue"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>