<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.quatroBandasFragment">

    <Button
        android:id="@+id/btnHistorico"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/historico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgResistor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/res"
        android:src="@drawable/resistor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003">

        <LinearLayout
            android:id="@+id/primeiro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/pBanda"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtBanda1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/segundo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sBanda"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtBanda2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt2"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/terceiro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/tBanda"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtBanda3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt3"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quarto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/qBanda"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtBanda4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt4"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listra1"
        android:layout_width="15dp"
        android:layout_height="75dp"
        android:background="#3E3737"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imgResistor"
        app:layout_constraintEnd_toEndOf="@+id/imgResistor"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="@+id/imgResistor"
        app:layout_constraintTop_toTopOf="@+id/imgResistor"></LinearLayout>

    <LinearLayout
        android:id="@+id/listra4"
        android:layout_width="15dp"
        android:layout_height="75dp"
        android:background="#673AB7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imgResistor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgResistor"></LinearLayout>

    <LinearLayout
        android:id="@+id/listra2"
        android:layout_width="15dp"
        android:layout_height="64dp"
        android:layout_marginBottom="4dp"
        android:background="#FF1100"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imgResistor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgResistor"
        app:layout_constraintVertical_bias="0.55"></LinearLayout>

    <LinearLayout
        android:id="@+id/listra3"
        android:layout_width="15dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="#4CAF50"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/imgResistor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgResistor"
        app:layout_constraintVertical_bias="0.45"></LinearLayout>

    <TextView
        android:id="@+id/resistencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.26" />

</androidx.constraintlayout.widget.ConstraintLayout>